# TRON_multiplayer

./: .gitignore  .gitmodules  LICENSE  README.md  example_ip.py  ip_example.py  server.py
rust-server-backend/: Cargo.toml
rust-server-backend/src/: main.rs
static/: DDSLoader.js  MTLLoader.js  OBJLoader.js  app_type.js  main.js  methods.js
static/animations/: title_screen.mkv
static/models/: arena.mtl  arena7.mtl  bike2.mtl  lightcycle.mtl
templates/: main.html  main1.html
tron_server/: Cargo.toml
tron_server/src/: main.rs
tron_server/src/game/: arena.rs  mod.rs  thegrid.rs
tron_server/src/game/managers/: account_manager.rs  animation_manager.rs  inventory_manager.rs  mod.rs  player_entity_manager.rs  player_manager.rs  vehicle_entity_manager.rs
tron_server/src/game/structs/: arena_context.rs  entries.rs  mod.rs
tron_server/src/io/: events.rs  mod.rs  network.rs
