[package]
name = "tron_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
futures = "0.3.28"
rapier3d = { version = "0.17.2", features = ["simd-stable"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
# tungstenite = "0.20.1"
